PT-3319: Long custom entries in the genes table cause layout issues

--- a/components/widgets/resources/src/main/resources/resources/uicomponents/widgets/extraGeneVariantData.css
+++ b/components/widgets/resources/src/main/resources/resources/uicomponents/widgets/extraGeneVariantData.css
@@ -5,6 +5,9 @@
   white-space: nowrap;
   padding-bottom: 1em;
 }
+.viewbody .gene-table td.gene {
+  white-space: normal;
+}
 .gene-table td.gene.Status, .gene-table td.gene.Strategy {
   min-width: 200px;
 }
